--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
+    "vue-esc": "^2.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
